Closed Bug 136779 Opened 22 years ago Closed 22 years ago

compareVersion() incorrectly returns NOT_FOUND after some upgrades

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: curt, Assigned: dveditz)

References

Details

(Whiteboard: [adt2 rtm],custrtm-)

Attachments

(1 file)

Old versions of Mozilla incorrectly registered components installed using the
addDirectory() command, using a "Path" entry (like the addFile command does)
instead of the correct "Directory" entry. This bug has long been fixed, but if
you keep upgrading into the same directory (as is the default) the old entry
persists in the registry alongside the correct one.

compareVersion sees this Path entry and when it turns out not to be a file
(because it's a directory) it assumes the item has been uninstalled and returns
NOT_FOUND instead of the correct comparison.

"Old" broken versions include Netscape 6.0, and the broken compareVersion makes
us stop looking for old short cuts that need to be removed/renamed.
The impact of not fixing this is that old named shortcuts will persist on the
users desktop and in the start menu after upgrading. Picking [adt2] out of the
air, please adjust.
Status: NEW → ASSIGNED
Keywords: nsbeta1+
Whiteboard: [adt2]
Whiteboard: [adt2] → [adt2 rtm]
Target Milestone: --- → mozilla1.0
Adding custrtm+; possible impact on customization.
Whiteboard: [adt2 rtm] → [adt2 rtm],custrtm
Whiteboard: [adt2 rtm],custrtm → [adt2 rtm],custrtm-
Comment on attachment 88895 [details] [diff] [review]
removing trailing path separator to make stat happy

r=curt
Attachment #88895 - Flags: review+
Comment on attachment 88895 [details] [diff] [review]
removing trailing path separator to make stat happy

sr=alecf
Attachment #88895 - Flags: superreview+
checked into trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Blocks: 143047
Keywords: approval
adding adt1.0.1+.  Please get drivers approval before checking in.
Keywords: adt1.0.1adt1.0.1+
Build: 2002-06-26-08-trunk(WIN)

Looks good on TRUNK.  Desktop shortcuts and Start menu items are cleaned up.  It
looks more clean with less noise.
Status: RESOLVED → VERIFIED
Attachment #88895 - Flags: approval+
please checkin to the 1.0.1 branch. once there, remove the "mozilla1.0.1+"
keyword and add the "fixed1.0.1" keyword.
Fixed on branch
Build: 2002-07-01-08-1.0(WIN)

Looks good on BRANCH as well.  Netscape 6 shortcuts (desktop and menu items) get
cleaned up.  Adding keyword "verified1.0.1".
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: