InstallTrigger.compareVersion() returns correct answer for directories (bug 136779) r=curt,sr=alecf