modules/libreg/src/VerReg.c
@@ -1011,7 +1011,14 @@ VR_INTERFACE(REGERR) VR_ValidateComponent(char *component_path)
     }
 
     {
+        uint32 len;
         struct stat  statStruct;
+
+        // directories are stored with a trailing separator -- if we
+        // have one of these we have to remove it for stat to work
+        len = strlen(path);
+        if ( path[len-1] == VR_FILE_SEP )
+            path[len-1] = 0;
 
         if ( stat ( path, &statStruct ) != 0 ) {
             err = REGERR_NOFILE;
